Added gc monitoring in monitor.sh, removed updateStats.sh from Makefile by putting functionality of 90th percentile in run_stream_testcase.sh